# tic-tac-toe-agent

./: .gitignore  main.py  pyproject.toml
src/: cell.py  game.py  position.py
src/agent/: feature_extractor.py  q_learning_agent.py
