[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["OLBEA20 <olivier.beaulieu.7@ulaval.ca>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
